--- a/src/components/header/title/title.module.css
+++ b/src/components/header/title/title.module.css
@@ -1,14 +1,10 @@
 .title {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: .25em;
-    color: inherit;
-    text-decoration: none;
+    gap: 1em;
 }
 
 .title-text {
-    font-weight: normal;
-    margin: 0;
-    width: min-content;
+    font-weight: 200;
 }
