--- a/src/layout.module.css
+++ b/src/layout.module.css
@@ -5,8 +5,56 @@
     font-style: normal;
 }
 
-main {
+.background {
     display: flow-root;
-    margin-left: 11em;
-    padding: 0 1em;
+    background-color: #0C0500;
+    height: 100vh;
+    color: bisque;
+}
+
+.background:before {
+    z-index: 1;
+    content: "";
+    background-color: transparent;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
+    background-repeat: repeat;
+    background-size: 100vh;
+    opacity: 0.02;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.background>* {
+    position: relative;
+    z-index: 2;
+}
+
+.bare-light {
+    position: fixed;
+    width: 70vh;
+    height: 70vh;
+    border-radius: 100%;
+    filter: blur(12em);
+    opacity: 10%;
+}
+
+main {
+    margin: 0 14em;
+    padding: 1em;
+    background-color: rgb(15, 15, 15);
+    border-radius: 1em;
+    box-shadow: rgb(95, 74, 55, 0.5) 0 0 .25em;
+}
+
+main:first-child,
+main :first-child {
+    margin-top: 0;
+}
+
+main:last-child,
+main :last-child {
+    margin-bottom: 0;
 }
