--- a/src/layout.module.css
+++ b/src/layout.module.css
@@ -5,34 +5,17 @@
     font-style: normal;
 }
 
+/*
+A class to center the childs: in this case, the header and main elements
+*/
 .top-holder {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.background {
-    background-color: #0C0500;
-    height: 100%;
-    color: bisque;
-}
-
-.background:before {
-    z-index: 1;
-    content: "";
-    background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
-    background-repeat: repeat;
-    background-size: 100vh;
-    opacity: 0.02;
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.background>* {
+/* Up the direct childs of a class's element */
+.top-holder>* {
     position: relative;
     z-index: 2;
 }
@@ -46,9 +29,10 @@
     opacity: 10%;
 }
 
+/* A container with the text */
 main {
     max-width: 56em;
-    margin: 0 2em;
+    margin: 1em 2em 2em 2em;
     padding: 1em;
     box-sizing: border-box;
     background-color: rgb(15, 15, 15);
@@ -56,16 +40,23 @@ main {
     box-shadow: rgb(95, 74, 55, 0.5) 0 0 .25em;
 }
 
-main:first-child,
+/*
+Remove the top margin for the top elements that was placed in the
+container with the text
+*/
 main :first-child {
     margin-top: 0;
 }
 
-main:last-child,
+/*
+Remove the bottom margin for the bottom elements that was placed in the
+container with the text
+*/
 main :last-child {
     margin-bottom: 0;
 }
 
+/* Adapting the weak lights to the small screens */
 @media screen and (width <=110em) {
     .weak-light {
         width: 60vh;
